[gd_scene load_steps=23 format=3 uid="uid://byulypn47e25d"]

[ext_resource type="Script" uid="uid://biwtfeqmumnhp" path="res://scripts/movement_script.gd" id="1_albgc"]
[ext_resource type="Texture2D" uid="uid://c1cggq1qpkn2" path="res://sprites/Neco-Arc_Remake.webp" id="2_87vvy"]
[ext_resource type="Texture2D" uid="uid://bod7vsbbvkf6x" path="res://icon.svg" id="2_w7t1m"]
[ext_resource type="Texture2D" uid="uid://bdkknxgnjx4br" path="res://sprites/dab5wii-75fe3686-159b-421c-9d8d-5c47f0f45c0d.png" id="3_w7t1m"]
[ext_resource type="Texture2D" uid="uid://rex2k82uptrn" path="res://sprites/64-suzuwalk-nueclassic-1.png.png" id="4_y7gsy"]
[ext_resource type="Texture2D" uid="uid://bpqssq1bvx218" path="res://sprites/64-suzuwalk-nueclassic-2.png.png" id="5_87vvy"]
[ext_resource type="Texture2D" uid="uid://d35cs3mhxlssm" path="res://sprites/64-suzumisc.png" id="7_75tk4"]
[ext_resource type="Script" uid="uid://eb4pxdalsr3a" path="res://scripts/follow_player.gd" id="7_mj42h"]
[ext_resource type="Texture2D" uid="uid://cqajv2lstelh1" path="res://sprites/64-suzufrontfacing-1.png.png" id="8_75tk4"]
[ext_resource type="Texture2D" uid="uid://3l5holnkidqd" path="res://sprites/Screenshot 2025-07-14 at 10.00.05.png" id="10_e05wm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ce2b1"]
atlas = ExtResource("3_w7t1m")
region = Rect2(98, 288, 96, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3wyf"]
atlas = ExtResource("3_w7t1m")
region = Rect2(2, 430, 96, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldohe"]
atlas = ExtResource("3_w7t1m")
region = Rect2(98, 430, 96, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7t1m"]
atlas = ExtResource("3_w7t1m")
region = Rect2(5, 286, 95, 143)

[sub_resource type="AtlasTexture" id="AtlasTexture_e05wm"]
atlas = ExtResource("7_75tk4")
region = Rect2(0, 0, 228, 228)

[sub_resource type="AtlasTexture" id="AtlasTexture_go3vc"]
atlas = ExtResource("7_75tk4")
region = Rect2(228, 0, 228, 228)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkip5"]
atlas = ExtResource("7_75tk4")
region = Rect2(0, 228, 228, 228)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6kc4"]
atlas = ExtResource("7_75tk4")
region = Rect2(228, 228, 228, 228)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfqjg"]
atlas = ExtResource("7_75tk4")
region = Rect2(0, 456, 228, 228)

[sub_resource type="SpriteFrames" id="SpriteFrames_ce2b1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_w7t1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce2b1")
}, {
"duration": 1.0,
"texture": ExtResource("2_87vvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3wyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldohe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7t1m")
}, {
"duration": 1.0,
"texture": ExtResource("4_y7gsy")
}, {
"duration": 1.0,
"texture": ExtResource("5_87vvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e05wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_go3vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkip5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6kc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfqjg")
}],
"loop": true,
"name": &"default",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7t1m")
}],
"loop": true,
"name": &"down_idleM",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_75tk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e05wm")
}],
"loop": true,
"name": &"down_idleS",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce2b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7t1m")
}],
"loop": true,
"name": &"down_walkM",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_go3vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e05wm")
}],
"loop": true,
"name": &"down_walkS",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3wyf")
}],
"loop": true,
"name": &"up_idleM",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkip5")
}],
"loop": true,
"name": &"up_idleS",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldohe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3wyf")
}],
"loop": true,
"name": &"up_walkM",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6kc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkip5")
}],
"loop": true,
"name": &"up_walkS",
"speed": 7.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_87vvy"]
radius = 0.615711

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_l3wyf"]
radius = 0.4
height = 1.38904

[node name="PaperCharacter" type="CharacterBody3D"]
collision_layer = 33
collision_mask = 33
script = ExtResource("1_albgc")
speed = 15.0
acceleration = 20.0

[node name="Sprite" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0.00236225, 0, 0)
alpha_cut = 2
sprite_frames = SubResource("SpriteFrames_ce2b1")
animation = &"down_idleS"
autoplay = "down_idleS"

[node name="Direction" type="Marker3D" parent="Sprite"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.428845, 0, 0)

[node name="ActionableFinder" type="Area3D" parent="Sprite/Direction"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sprite/Direction/ActionableFinder"]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 0, 0, 0)
shape = SubResource("CapsuleShape3D_87vvy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_l3wyf")

[node name="TwistPivot" type="Node3D" parent="."]
script = ExtResource("7_mj42h")
follow_speed = 20.0

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]

[node name="SpringArm3D" type="SpringArm3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.922102, 0)
spring_length = 4.0
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0406749, 3.90897)
v_offset = 0.05
fov = 60.0
near = 0.01

[node name="InteractBubble" type="Sprite3D" parent="TwistPivot"]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 1, 0.5485, 0)
texture = ExtResource("10_e05wm")
